# zk-wordle

./: .gitignore  README.md  index.html  rust-toolchain.toml
_expo/static/js/web/: AppEntry-8590a9da52b52b8d89b1be10e60c7a13.js
front/: App.tsx  README.md  app.json  package-lock.json  package.json
front/patches/: @expo+browser-polyfill+1.0.1.patch
front/public/: index.html
front/src/: Keyboard.tsx  ResultView.tsx  TopBar.tsx  api.ts  keys.ts  types.ts  verify.ts  words.ts
keys/: circuit_final.zkey  membership_final.zkey  membership_verification_key.json
merkle/: Cargo.toml
merkle/src/: lib.rs
proof/: clue.circom  clue.r1cs  clue.sym  clue_0001.zkey  verification_key.json
proof-clue/: clue.r1cs  clue.sym
proof-clue/clue_js/: clue.wasm
proof-membership/: membership.circom  membership.r1cs  membership.sym
proof-membership/membership_js/: membership.wasm
proof/clue_js/: clue.wasm
server/: Cargo.toml
server/src/: game_state.rs  http_service.rs  main.rs  proofs.rs  request_response.rs  word_bank.rs
